--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
         </div>
     </div>
     
-    <script src="libgif.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="></script>
     <script src="script.js"></script>
 </body>
 </html>
+
 
