--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </label>
                 <div id="file-info" class="file-info"></div>
             </div>
-            
+
             <button id="compress-btn" class="compress-btn" disabled>圧縮を開始</button>
         </div>
 
@@ -54,10 +54,11 @@
             <a id="download-link" class="download-btn" download="compressed.gif">ダウンロード</a>
         </div>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="></script>
+
+    <script src="libgif.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
