--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <button id="compress-btn" class="compress-btn" disabled>圧縮を開始</button>
         </div>
 
+        <div id="progress-container" style="display:none; margin-top: 20px;">
+            <p>圧縮中... <span id="progress-percent">0</span>%</p>
+            <progress id="progress-bar" value="0" max="100" style="width: 100%;"></progress>
+        </div>
+
         <div id="status" class="status-message"></div>
 
         <div id="result-area" class="result-area" style="display:none;">
@@ -55,10 +60,8 @@
         </div>
     </div>
 
-    <script src="libgif.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/omggif@1.0.10/omggif.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
